# CppFeatures

./: 3_constexpr.cpp  4_if_constexpr.cpp  5_inline_variable.cpp  5_inline_variable.h  5_inline_variable_main.cpp  6_if_switch_init.cpp  7_nested_namespace.cpp  CMakeLists.txt  IIFE_lambda.cpp  attribute_deprecated.cpp  attribute_maybe_unused.cpp  attribute_nodiscard.cpp  attributes.cpp  constexpr.cpp
